# dia

./: .cursorrules  .gitignore  INFORME_CAMBIOS.md  Makefile  README.md  docker-compose.yml
cli/: README.md  git-M  git-commit-cursor  pyproject.toml  setup-helpers.sh  setup.cfg
cli/dia_cli/: config.py  cursor_reminder.py  git_ops.py  llm_analyzer.py  main.py  ndjson.py  rules.py  sessions.py  summaries.py  templates.py  utils.py
cli/dia_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/dia_cli/default_rules/: repo_structure.json  rules.json
data/: rules.json
data/bitacora/: 2026-01-17.md
data/bitacora/2026-01-17/: S01.md  (+2 more)
data/index/: events.ndjson  sessions.ndjson  summaries.ndjson
docs/: CONTEXTO_INICIAL.md  ESTADO_ACTUAL.md  INFORME_V0_1_1_BLINDAJE_ZONA_INDELIBLE.md  README.md  RESUMEN_DISENO_DIA.md  SPEC_FORK_MIN_DIA.md  dia — Estructura NDJSON de eventos (v0.1)
docs/guides/: TESTING_NUEVOS_COMANDOS.md  dia-close-day.md  dia-day.md  dia-desarrollo.md  dia-session.md  dia-summarize.md  dia-summary.md  documentacion-scopes.md  gestion-data.md  sesiones-multiples.md  workflow_error_fix_commit.md
docs/manual/: CAPTURA_ERRORES.md  TUTORIAL_INTRO_V0_1.md
docs/modules/: App.md
docs/overview/: ESTADO_ACTUAL.md  RESUMEN_DISENO_DIA.md
docs/specs/: SPEC_FORK_MIN_DIA.md
docs/ui/: App.md
server/: Dockerfile  db.sqlite3  manage.py  requirements.txt
server/api/: urls.py  views.py
server/dia_server/: asgi.py  settings.py  wsgi.py
ui/: Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.svelte  app.css
(+41 files in other folders)
