[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dia-cli"
version = "0.1.0"
description = "CLI de /dia v0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
dia = "dia_cli.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["dia_cli*"]
